syntax = "proto3";
package hu.fluffy;

import "google/protobuf/empty.proto";

option java_multiple_files = true;


enum condition {
    new = 0;
    used = 1;
}

message advertisement {
    string user = 1;
    reserved 2;
    string message = 3;
    condition condition = 4;
    //map<string, string> comments = 5;
}


message addAdvertisementReq {
    advertisement advertisement = 1; 
}


message getAllAdvertisementResp {
    repeated advertisement advertisement = 1;
}

service AdvertisementService {
    rpc addAdvertisement(addAdvertisementReq) returns (google.protobuf.Empty);
    rpc getAllAdvertisement(google.protobuf.Empty) returns (getAllAdvertisementResp);
    rpc getAllAdvertisementStream(google.protobuf.Empty) returns (stream advertisement);
}
